gui-faceted-filters: clear filter btn moved to splitPanel. Filters can not be collapsed below last active filter. Fix document type filter unable to click in some scenarious bug

--- a/client/src/components/search/FacetedSearch.css
+++ b/client/src/components/search/FacetedSearch.css
@@ -46,6 +46,7 @@
 .container .content .panel.faceted-filters {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .container .content .panel.search-results {
@@ -72,6 +73,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
+  align-items: center;
 }
 
 .container .actions > * {
@@ -95,24 +97,22 @@
   padding-right: 0;
 }
 
-.container .actions .clear-filters-btn {
-  font-size: 18px;
-  padding: 5px 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ff4d4f;
-  border-color: #ff4d4f;
+.container .clear-filters-btn {
+  position: sticky;
+  top: 0px;
+  left: 100%;
+  padding: 2px 5px;
+  border-radius: 3px;
+  height: 20px;
+  background: #1890ff;
   color: white;
-  border-radius: 5px;
-  margin-right: 5px;
-  height: 32px;
+  z-index: 1;
+  margin-bottom: -20px;
+  width: 74px;
   cursor: pointer;
+  transition: transform 0.2s ease;
 }
 
-.container .actions .clear-filters-btn.disabled {
-  background-color: transparent;
-  color: #999;
-  border-color: transparent;
-  cursor: default;
+.container .clear-filters-btn.disabled {
+  transform: translateY(-22px);
 }
